[gd_scene load_steps=3 format=3 uid="uid://dc3j5h50tp0m2"]

[ext_resource type="Texture2D" uid="uid://b1kqklqkhp1fe" path="res://art/Dome_uninfested.png" id="1_6jw02"]
[ext_resource type="Script" path="res://dome.gd" id="1_n1lt3"]

[node name="Dome" type="Node2D"]
position = Vector2(547, 313)
script = ExtResource("1_n1lt3")

[node name="DomeStatus" type="Label" parent="."]
offset_left = -16.0
offset_top = -53.0
offset_right = 24.0
offset_bottom = -30.0
text = "Safe"

[node name="InfestationCheckTimer" type="Timer" parent="."]
autostart = true

[node name="DomeLostCountdownTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Building" type="Node2D" parent="."]
scale = Vector2(1, 1)

[node name="BuildingSprite" type="Sprite2D" parent="Building"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_6jw02")

[connection signal="fully_infested" from="." to="." method="_on_fully_infested"]
[connection signal="timeout" from="InfestationCheckTimer" to="." method="_on_infestation_check_timer_timeout"]
[connection signal="timeout" from="DomeLostCountdownTimer" to="." method="_on_dome_lost_countdown_timer_timeout"]
